deploy: 69c1f7d3941839c3e245c5ad479aaf9b49c2ff99

--- a/dashboard.html
+++ b/dashboard.html
@@ -12,19 +12,138 @@
 <link rel="modulepreload" href="./_observablehq/client.js">
 <link rel="modulepreload" href="./_observablehq/runtime.js">
 <link rel="modulepreload" href="./_observablehq/stdlib.js">
+<link rel="modulepreload" href="./_npm/d3-require@1.3.0/_esm.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/timeGlyph.30b74103.js">
+<link rel="modulepreload" href="./_node/@turf/turf@7.1.0/index.js">
+<link rel="modulepreload" href="./_import/components/radialglyph.e10c9304.js">
+<link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.e22a1d11.js">
+<link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/model.0139f19a.js">
-<link rel="modulepreload" href="./_npm/maplibre-gl@2.0.0/_esm.js">
 <link rel="modulepreload" href="./_import/components/budgetAllocator.46c04ac3.js">
 <link rel="modulepreload" href="./_import/components/miniDecarbModel.d0583510.js">
 <link rel="modulepreload" href="./_import/components/sorterTable.02180658.js">
 <link rel="modulepreload" href="./_import/components/helpers.e38ff765.js">
+<link rel="modulepreload" href="./_import/components/utils.ec49f1d6.js">
 <link rel="modulepreload" href="./_npm/d3@7.9.0/_esm.js">
+<link rel="modulepreload" href="./_import/components/osgb/ellipsoid.1ac4eba6.js">
+<link rel="modulepreload" href="./_npm/topojson-client@3.1.0/_esm.js">
 <link rel="modulepreload" href="./_observablehq/stdlib/duckdb.js">
 <link rel="modulepreload" href="./_npm/htl@0.3.1/_esm.js">
 <link rel="modulepreload" href="./_observablehq/stdlib/inputs.js">
 <link rel="modulepreload" href="./_npm/@duckdb/duckdb-wasm@1.28.0/_esm.js">
 <link rel="modulepreload" href="./_npm/isoformat@0.2.1/_esm.js">
+<link rel="modulepreload" href="./_node/@turf/along@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/angle@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/area@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/bbox@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/bbox-clip@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/bbox-polygon@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/bearing@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/bezier-spline@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-clockwise@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-concave@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-contains@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-crosses@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-disjoint@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-equal@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-intersects@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-overlap@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-parallel@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-point-in-polygon@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-point-on-line@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-touches@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-valid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/boolean-within@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/buffer@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/center@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/center-mean@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/center-median@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/center-of-mass@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/centroid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/circle@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/clean-coords@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/clone@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/clusters@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/clusters-dbscan@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/clusters-kmeans@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/collect@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/combine@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/concave@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/convex@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/destination@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/difference@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/dissolve@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/distance@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/distance-weight@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/ellipse@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/envelope@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/explode@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/flatten@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/flip@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/geojson-rbush@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/great-circle@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/helpers@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/hex-grid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/interpolate@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/intersect@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/invariant@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/isobands@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/isolines@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/kinks@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/length@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-arc@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-chunk@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-intersect@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-offset@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-overlap@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-segment@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-slice@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-slice-along@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-split@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/line-to-polygon@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/mask@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/meta@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/midpoint@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/moran-index@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/nearest-neighbor-analysis@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/nearest-point@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/nearest-point-on-line@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/nearest-point-to-line@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/planepoint@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/point-grid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/point-on-feature@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/points-within-polygon@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/point-to-line-distance@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/polygonize@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/polygon-smooth@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/polygon-tangents@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/polygon-to-line@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/projection@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/quadrat-analysis@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/random@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/rectangle-grid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/rewind@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/rhumb-bearing@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/rhumb-destination@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/rhumb-distance@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/sample@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/sector@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/shortest-path@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/simplify@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/square@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/square-grid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/standard-deviational-ellipse@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/tag@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/tesselate@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/tin@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/transform-rotate@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/transform-scale@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/transform-translate@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/triangle-grid@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/truncate@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/union@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/unkink-polygon@7.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/voronoi@7.1.0/index.js">
 <link rel="modulepreload" href="./_npm/d3-array@3.2.4/_esm.js">
 <link rel="modulepreload" href="./_npm/d3-axis@3.0.0/_esm.js">
 <link rel="modulepreload" href="./_npm/d3-brush@3.0.0/_esm.js">
@@ -56,10 +175,29 @@
 <link rel="modulepreload" href="./_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="./_npm/d3-zoom@3.0.0/_esm.js">
 <link rel="modulepreload" href="./_npm/apache-arrow@18.0.0/_esm.js">
+<link rel="modulepreload" href="./_node/geojson-equality-ts@1.0.2/index.js">
+<link rel="modulepreload" href="./_node/point-in-polygon-hao@1.1.0/index.js">
+<link rel="modulepreload" href="./_node/@turf/jsts@2.7.1/index.js">
+<link rel="modulepreload" href="./_node/d3-geo@1.7.1/index.js">
+<link rel="modulepreload" href="./_node/rbush@3.0.1/index.js">
+<link rel="modulepreload" href="./_node/skmeans@0.9.7/index.js">
+<link rel="modulepreload" href="./_node/topojson-client@3.1.0/index.js">
+<link rel="modulepreload" href="./_node/topojson-server@3.0.1/index.js">
+<link rel="modulepreload" href="./_node/concaveman@1.2.1/index.js">
+<link rel="modulepreload" href="./_node/polygon-clipping@0.15.7/index.js">
+<link rel="modulepreload" href="./_node/marchingsquares@1.3.3/index.js">
+<link rel="modulepreload" href="./_node/sweepline-intersections@1.5.0/index.js">
+<link rel="modulepreload" href="./_node/fast-deep-equal@3.1.3/index.js">
+<link rel="modulepreload" href="./_node/earcut@2.2.4/index.js">
+<link rel="modulepreload" href="./_node/d3-voronoi@1.1.2/index.js">
 <link rel="modulepreload" href="./_npm/internmap@2.0.3/_esm.js">
 <link rel="modulepreload" href="./_npm/delaunator@5.0.1/_esm.js">
 <link rel="modulepreload" href="./_npm/tslib@2.8.1/_esm.js">
 <link rel="modulepreload" href="./_npm/flatbuffers@24.3.25/_esm.js">
+<link rel="modulepreload" href="./_node/d3-array@1.2.4/index.js">
+<link rel="modulepreload" href="./_node/tinyqueue@2.0.3/index.js">
+<link rel="modulepreload" href="./_node/point-in-polygon@1.1.0/index.js">
+<link rel="modulepreload" href="./_node/robust-predicates@2.0.4/umd/orient2d.min.js">
 <link rel="modulepreload" href="./_npm/robust-predicates@3.0.2/_esm.js">
 <script type="module">
 
@@ -67,14 +205,22 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731830699689});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.28ee7510.parquet","lastModified":1731838050831});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
-define({id: "b675a7c8", outputs: ["TimeGlyph","GlyphCollection","Model","maplibregl","Mutable","BudgetAllocator","MiniDecarbModel","createTable","inferTypes"], body: async () => {
-const [{TimeGlyph, GlyphCollection}, {Model}, {default: maplibregl}, {Mutable}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {inferTypes}] = await Promise.all([import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_import/components/model.0139f19a.js"), import("./_npm/maplibre-gl@2.0.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.d0583510.js"), import("./_import/components/sorterTable.02180658.js"), import("./_import/components/helpers.e38ff765.js")]);
+define({id: "1fe10fe6", outputs: ["d3","flubber","require","Mutable","TimeGlyph","GlyphCollection","turf","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","Model","BudgetAllocator","MiniDecarbModel","createTable","inferTypes","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
+const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {inferTypes}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.d0583510.js"), import("./_import/components/sorterTable.02180658.js"), import("./_import/components/helpers.e38ff765.js"), import("./_import/components/utils.ec49f1d6.js")]);
+const d3 = require("d3", "d3-geo-projection");
+const flubber = require("flubber@0.4");
 
 
-return {TimeGlyph,GlyphCollection,Model,maplibregl,Mutable,BudgetAllocator,MiniDecarbModel,createTable,inferTypes};
+
+return {d3,flubber,require,Mutable,TimeGlyph,GlyphCollection,turf,RadialGlyph,glyphMap,createDiscretiserValue,_drawCellBackground,OSGB,Model,BudgetAllocator,MiniDecarbModel,createTable,inferTypes,downloadBoundaries,joinCensusDataToGeoJSON,convertGridCsvToGeoJson,context2d};
+}});
+
+define({id: "5dd85f8f", inputs: ["OSGB"], outputs: ["proj"], body: (OSGB) => {
+const proj = new OSGB();
+return {proj};
 }});
 
 define({id: "d4d16302", inputs: ["sql"], outputs: ["oxford_data"], body: async (sql) => {
@@ -595,7 +741,8 @@ console.log("Test inferring data types", inferTypes(tableData));
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------ Imports ------------ -->
-<div class="observablehq observablehq--block"><!--:b675a7c8:--></div>
+<div class="observablehq observablehq--block"><!--:1fe10fe6:--></div>
+<div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ---------------- Data ---------------- -->
 <div class="observablehq observablehq--block"><!--:d4d16302:--></div>
 <div class="observablehq observablehq--block"><!--:28c25a2a:--></div>
@@ -603,10 +750,10 @@ console.log("Test inferring data types", inferTypes(tableData));
 <div class="observablehq observablehq--block"><!--:d47e63b1:--></div>
 <!-------- Stylesheets -------->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
-<link href="https://unpkg.com/maplibre-gl@2.1.9/dist/maplibre-gl.css" rel="stylesheet">
-<link rel="stylesheet" href="./_file/styles/dashboard.2badc1f5.css">
+<!-- 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link rel="stylesheet" href="./_file/styles/dashboard.2badc1f5.css">
 <style>
 body, html {
   height: 100%;
@@ -642,7 +789,7 @@ body, html {
   #left-panel {
      /* Spans 2 rows */
     display: grid;
-    grid-template-rows: 1fr 1fr; /* Two equal rows */
+    /* grid-template-rows: 1fr 1fr; Two equal rows */
     gap: 8px;
   }
 
@@ -764,15 +911,13 @@ body, html {
   <div id="main-panel">
     <!-- <div class="card main-top">Map View</div> -->
     <div class="main-top">
-      <div class="card" style="overflow-x:hidden">
+      <div class="card" style="overflow-x:hidden; min-width: 400px;">
       Sortable Table
       <observablehq-loading></observablehq-loading><!--:27617c0d:-->
-      <!-- ${Inputs.table(selectedIntervention.allBuildings.map((building) => ({
-        ...building.properties, intervention: building.isIntervened,
-      }))
-      )} -->
       </div>
-      <div class="card">Map View</div>
+      <div class="card" style="overflow-x:hidden; min-width: 400px;">
+      Map View
+      </div>
     </div>
     <div class="main-bottom">
       <div class="card">
